--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
 <ion-header-bar class="bar-stable">
-  <h1 class="title">Exis Chat</h1>
+  <h1 class="title" ng-bind="welcome"></h1>
 </ion-header-bar>
 <ion-view view-title="Home" class="chat-detail">
-  <ion-content class="padding" delegate-handle="mainScroll">
+  <ion-content class="padding">
     <div ng-repeat="message in msgs" class="message-wrapper rlt">
       <div ng-if="message.received && !message.join">
         <img class="profile-picture left" src="img/exis.png" />
@@ -25,19 +25,24 @@
           </div>
         </div>
       </div>
+      <div ng-if="message.join">
+        <div class="note"> <strong>{{ message.username }} entered the room.</strong></div>
+      </div>
       <div class="cf"></div>
     </div>
   </ion-content>
 
-  <form name="sendMessageForm" ng-submit="sendMsg(input.msg)" novalidate>
+  <form name="sendMessageForm"  novalidate>
     <ion-footer-bar class="bar-stable message-footer" keyboard-attach class="bar-assertive">
       <label class="item-input-wrapper">
         <input type="text" ng-model="input.msg" value="" placeholder="Send a message..."
                   required minlength="1" maxlength="1500" ></input>
       </label>
       <div class="footer-btn-wrap">
-        <button class="button button-icon icon ion-android-send footer-btn" type="submit"
+        <button class="button button-icon icon ion-android-send footer-btn" type="submit" ng-click="sendMsg(input.msg)"
                 ng-disabled="!input.msg || input.msg === ''">
+        </button>
+        <button class="button button-icon icon ion-android-exit footer-btn" ng-click="signout()">
         </button>
       </div>
     </ion-footer-bar>
